syntax = "proto3";
option csharp_namespace = "SimpleSchedulerBlazor.ProtocolBuffers.Services";
package SimpleSchedulerBlazorProtocolBuffers;

import "messages.login.proto";

service LoginService {
    rpc GetAllUserEmails(GetAllUserEmailsRequest) returns (GetAllUserEmailsReply);
    rpc IsLoggedIn(IsLoggedInRequest) returns (IsLoggedInReply);
    rpc SubmitEmail(SubmitEmailRequest) returns (SubmitEmailReply);
    rpc ValidateEmail(ValidateEmailRequest) returns (ValidateEmailReply);
}
